--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="col-md-4">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title">Tổng lượt tiếp nhận ngoại - nội trú</div>
+									<div class="card-title text-info">Tổng lượt tiếp nhận ngoại - nội trú</div>
 									<div class="row py-3">
 										<div class="col-md-4 d-flex flex-column justify-content-around">
 											<div>
@@ -83,7 +83,7 @@
 						<div class="col-md-8">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title">Các chỉ số chung của bệnh viện</div>
+									<div class="card-title text-info">Các chỉ số chung của bệnh viện</div>
 									<div class="card-category"></div>
 									<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -150,7 +150,7 @@
 							<div class="card">
 								<div class="card-header">
 									<div class="card-head-row">
-										<div id="column-1-title" class="card-title"></div>
+										<div id="column-1-title" class="card-title text-info"></div>
 									</div>
 								</div>
 								<div class="card-body">
@@ -162,38 +162,12 @@
 						</div>
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-body">
-									<div class="d-flex justify-content-between">
-										<div>
-											<h5><b>IPSGs</b></h5>
-										</div>
-										<h3 class="text-info fw-bold">$170</h3>
+								<div class="card-header">
+									<div class="card-head-row">
+										<h3 class="card-title text-info fw-bold">IPSGs</h3>
 									</div>
-									<table class="table-striped">
-										<tr>
-											<div class="progress">
-												<div class="progress-bar bg-info w-50" role="progressbar"
-													aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<p class="text-muted mb-0">Tỷ lệ tuân thủ thực hiện Time-out tại phòng mổ</p>
-												<p class="text-muted mb-0">75%</p>
-											</div>
-											<br>
-										</tr>
-										<tr>
-											<div class="progress">
-												<div class="progress-bar bg-danger" role="progressbar"
-													aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"
-													style="width:7%"></div>
-											</div>
-											<div class="d-flex justify-content-between mt-2">
-												<p class="text-muted mb-0">Change</p>
-												<p class="text-muted mb-0">75%</p>
-											</div>
-											<br>
-										</tr>
-									</table>
+								</div>
+								<div id="ipsgs-chart" class="card-body">
 								</div>
 							</div>
 						</div>
@@ -259,7 +233,7 @@
 	<script src="assets/js/charts/details.js"></script>
 	<script src="assets/js/charts/circles.js"></script>
 	<script src="assets/js/charts/total-income.js"></script>
-	<!-- <script src="assets/js/charts/carbon-zero-progress.js"></script> -->
+	<script src="assets/js/charts/ipsgs.js"></script>
 
 </body>
 
