--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="card-body">
 									<div class="card-title text-info">Tổng lượt tiếp nhận ngoại - nội trú</div>
 									<div class="row py-3">
-										<div class="col-md-4 d-flex flex-column justify-content-around">
+										<div class="col-md-3 d-flex flex-column justify-content-around">
 											<div>
 												<h6 class="fw-bold text-uppercase text-success op-8">Ngoại trú</h6>
 												<h3 class="fw-bold">782</h3>
@@ -71,7 +71,7 @@
 												<h3 class="fw-bold">248</h3>
 											</div>
 										</div>
-										<div class="col-md-8">
+										<div class="col-md-9">
 											<div id="chart-container">
 												<canvas id="totalIncomeChart"></canvas>
 											</div>
@@ -83,7 +83,7 @@
 						<div class="col-md-8">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title text-info">Các chỉ số chung của bệnh viện</div>
+									<div class="card-title text-info">Các chỉ số chung của bệnh viện (%)</div>
 									<div class="card-category"></div>
 									<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -167,7 +167,8 @@
 										<h3 class="card-title text-info fw-bold">IPSGs</h3>
 									</div>
 								</div>
-								<div id="ipsgs-chart" class="card-body">
+								<div id="ipsgs-chart" class="card-body"
+									style="height:500px; overflow-y:scroll;">
 								</div>
 							</div>
 						</div>
