add total income chart

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 				</div>
 				<div class="page-inner mt--5">
 					<div class="row mt--2">
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title text-info">Tổng lượt tiếp nhận ngoại - nội trú</div>
+									<div class="card-title text-info">Số lượng tiếp nhận theo ngày</div>
 									<div class="row py-3">
-										<div class="col-md-3 d-flex flex-column justify-content-around">
+										<!-- <div class="col-md-3 d-flex flex-column justify-content-around">
 											<div>
 												<h6 class="fw-bold text-uppercase text-success op-8">Ngoại trú</h6>
 												<h3 class="fw-bold">782</h3>
@@ -70,8 +70,8 @@
 												<h6 class="fw-bold text-uppercase text-danger op-8">Nội trú</h6>
 												<h3 class="fw-bold">248</h3>
 											</div>
-										</div>
-										<div class="col-md-9">
+										</div> -->
+										<div class="col-md-12">
 											<div id="chart-container">
 												<canvas id="totalIncomeChart"></canvas>
 											</div>
@@ -80,7 +80,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-9">
 							<div class="card full-height">
 								<div class="card-body">
 									<div class="card-title text-info">Các chỉ số chung của bệnh viện (%)</div>
@@ -168,7 +168,7 @@
 									</div>
 								</div>
 								<div id="ipsgs-chart" class="card-body"
-									style="height:500px; overflow-y:scroll;">
+									style="height:480px; overflow-y:scroll;">
 								</div>
 							</div>
 						</div>
