--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 				</div>
 				<div class="page-inner mt--5">
 					<div class="row mt--2">
-						<div class="col-md-3">
+						<div class="col-md-4">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title text-info">Số lượng tiếp nhận theo ngày</div>
+									<div class="card-title text-info">Tổng lượng tiếp nhận theo ngày</div>
 									<div class="row py-3">
 										<!-- <div class="col-md-3 d-flex flex-column justify-content-around">
 											<div>
@@ -80,7 +80,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-8">
 							<div class="card full-height">
 								<div class="card-body">
 									<div class="card-title text-info">Các chỉ số chung của bệnh viện (%)</div>
@@ -177,7 +177,12 @@
 						<div class="col-md-12">
 							<div class="card card-light">
 								<div class="card-header">
-									<div class="card-title">Test</div>
+									<div class="card-title text-info">Danh sách chỉ số theo khoa phòng</div>
+								</div>
+								<div class="card-body">
+									<div id="column-1" class="chart-container"
+										style="padding-top: -5px; min-height: 440px">
+									</div>
 								</div>
 							</div>
 						</div>
