--- a/index.html
+++ b/index.html
@@ -174,14 +174,26 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-md-6">
 							<div class="card card-light">
 								<div class="card-header">
-									<div class="card-title text-info">Danh sách chỉ số theo khoa phòng</div>
+									<div class="card-title text-info">Chỉ số theo khoa phòng</div>
 								</div>
 								<div class="card-body">
-									<div id="column-1" class="chart-container"
-										style="padding-top: -5px; min-height: 440px">
+									<div id="column-2" class="chart-container"
+										style="min-height: 440px">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="card card-light">
+								<div class="card-header">
+									<div class="card-title text-info">Vào viện - Chuyển viện - Nhập viện</div>
+								</div>
+								<div class="card-body">
+									<div id="column-3" class="chart-container"
+										style="min-height: 300px">
 									</div>
 								</div>
 							</div>
