--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 
 	<!-- Charts -->
 	<script src="assets/js/charts/column-with-rotated-labels.js"></script>
+	<script src="assets/js/charts/multi-line-chart.js"></script>
 	<script src="assets/js/charts/line-graph.js"></script>
 	<script src="assets/js/charts/details.js"></script>
 	<script src="assets/js/charts/circles.js"></script>
