Thêm biểu đồ số lượng cấp cứu

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-md-6">
 							<div class="card card-light">
 								<div class="card-header">
@@ -181,7 +181,7 @@
 								</div>
 								<div class="card-body">
 									<div id="column-2" class="chart-container"
-										style="min-height: 440px">
+										style="min-height: 400px">
 									</div>
 								</div>
 							</div>
@@ -193,12 +193,12 @@
 								</div>
 								<div class="card-body">
 									<div id="column-3" class="chart-container"
-										style="min-height: 300px">
+										style="min-height: 400px">
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
