--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="col-md-8">
 							<div class="card full-height">
 								<div class="card-body">
-									<div class="card-title text-info">Các chỉ số chung của bệnh viện (%)</div>
+									<div class="card-title text-info">Các chỉ số chung của bệnh viện - đơn vị % (Nhấn vào để xem chi tiết)</div>
 									<div class="card-category"></div>
 									<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
 										<div class="px-2 pb-2 pb-md-0 text-center">
@@ -167,8 +167,7 @@
 										<h3 class="card-title text-info fw-bold">IPSGs</h3>
 									</div>
 								</div>
-								<div id="ipsgs-chart" class="card-body"
-									style="height:480px; overflow-y:scroll;">
+								<div id="ipsgs-chart" class="card-body" style="height:480px; overflow-y:scroll;">
 								</div>
 							</div>
 						</div>
